src/main/default/objects/C501_Appointment_Schedule__c/fields/Appointment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Start_Date__c</fullName>
    <formula>DATEVALUE( Scheduled_Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Start Date</label>
    <type>Date</type>
</CustomField>