src/main/default/objects/C501_Appointment_Schedule__c/fields/Duration_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Hours__c</fullName>
    <label>Duration In Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>