src/main/default/objects/C501_Appointment_Schedule__c/fields/Number_Appointments_per_15_min_interval__c.field-meta.xml
<CustomField>
    <fullName>Number_Appointments_per_15_min_interval__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Maximum number of households available to sign-up per 15 minute interval.</description>
    <inlineHelpText>Maximum number of households available to sign-up per 15 minute interval.</inlineHelpText>
    <label>Number Appointments per 15 min interval</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>