src/main/default/objects/C501_Appointment_Schedule__c/fields/Number_Appointments_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_Appointments_per_Month__c</fullName>
    <description>Maximum number of appointments a household can have in a month to be available to sign-up for this appointment.</description>
    <inlineHelpText>Maximum number of appointments a household can have in a month to be available to sign-up for this appointment.</inlineHelpText>
    <label>Number Appointments per Month</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>