src/main/default/objects/C501_Appointment_Schedule__c/fields/Range_Of_Recurrence_End_By__c.field-meta.xml
<CustomField>
    <fullName>Range_Of_Recurrence_End_By__c</fullName>
    <label>Range of Recurrence End By</label>
    <type>Date</type>
</CustomField>