src/main/default/objects/C501_Appointment_Schedule__c/fields/Scheduled_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Time__c</fullName>
    <label>Scheduled End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>