src/main/default/objects/C501_Appointment_Schedule__c/fields/Scheduled_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Date_Time__c</fullName>
    <label>Scheduled Start Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>