src/main/default/objects/C501_Appointment_Schedule__c/fields/Senior_Only_Appointments_60_and_over__c.field-meta.xml
<CustomField>
    <fullName>Senior_Only_Appointments_60_and_over__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Only Appointments (60 and over)</label>
    <type>Checkbox</type>
</CustomField>