src/main/default/objects/C501_Appointment_Schedule__c/fields/Weekly_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Occurrence__c</fullName>
    <label>Weekly Occurrence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>