src/main/default/objects/C501_Appointment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Days_of_Week__c</columns>
    <columns>Scheduled_Start_Date_Time__c</columns>
    <columns>Scheduled_End_Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Number_Appointments_per_Month__c</columns>
    <columns>Weekly_Occurrence__c</columns>
    <columns>Range_Of_Recurrence_End_By__c</columns>
    <columns>Enable__c</columns>
    <columns>Number_Appointments_per_15_min_interval__c</columns>
    <columns>Senior_Only_Appointments_60_and_over__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>