src/main/default/objects/C501_Appointment_Schedule__c/listViews/All_with_Updat.listView-meta.xml
<ListView>
    <fullName>All_with_Updat</fullName>
    <columns>Enable__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Days_of_Week__c</columns>
    <columns>Scheduled_Start_Date_Time__c</columns>
    <columns>Scheduled_End_Time__c</columns>
    <columns>Range_Of_Recurrence_End_By__c</columns>
    <columns>Weekly_Occurrence__c</columns>
    <columns>Number_Appointments_per_Month__c</columns>
    <columns>Number_Appointments_per_15_min_interval__c</columns>
    <columns>Senior_Only_Appointments_60_and_over__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_Start_Date__c</field>
        <operation>equals</operation>
        <value>2/27/2025</value>
    </filters>
    <label>All, with Last Updated Date</label>
</ListView>